--- a/.gitignore
+++ b/.gitignore
@@ -185,4 +185,6 @@ cython_debug/
 # Ignore code-workspaces
 *.code-workspace
 
-# End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
+.DS_Store
+
+.pylintrc
